syntax = "proto3";
option csharp_namespace = "SakuraLibrary.Proto";

import "user.proto";
import "tunnel.proto";

enum MessageID {
  USER_LOGIN = 0;
  USER_LOGOUT = 1;
  USER_INFO = 2;
  TUNNEL_LIST = 3;
  TUNNEL_RELOAD = 4;
  TUNNEL_UPDATE = 5;
  TUNNEL_LOG_GET = 6;
  TUNNEL_LOG_CLEAR = 7;
}

message BasicResponse {
  bool success = 1;
  string message = 2;
}

message BasicRequest {
  int32 version = 1;
  MessageID type = 2;

  oneof data {
    UserLogin USER_LOGIN = 3;
    UpdateTunnelStatus TUNNEL_UPDATE = 5;
    GetTunnelLog TUNNEL_LOG_GET = 6;
    ClearTunnelLog TUNNEL_LOG_CLEAR = 7;
  }
}
